<resources>
    <string name="app_name">Anaemia Detection</string>
    <string name="app_logo">Anaemia Detection Logo</string>
    <string name="app_family">Anaemia Detection Family</string>
    <string name="college_logo">MIT-WPU Logo</string>
    <string name="app_about_button">About</string>
    <string name="app_get_started_button">Get Started</string>
    <string name="app_back_button">Back</string>
    <string name="app_next_button">Next</string>
    <string name="app_click_image_button">Click Image</string>
    <string name="app_get_results_button">Get Results</string>
    <string name="app_home_button">Home</string>
    <string name="app_name_anaemia_uppercase">ANAEMIA</string>
    <string name="app_name_detection_uppercase">DETECTION</string>
    <string name="app_about_uppercase">ABOUT</string>
    <string name="app_group_members_uppercase">GROUP MEMBERS</string>
    <string name="app_group_member_one">Shubham Jain</string>
    <string name="app_group_member_two">Aarushi Gupta</string>
    <string name="app_group_member_three">Ahmad Jamal Shaikh</string>
    <string name="app_group_member_four">Shreyanshi Tripathi</string>
    <string name="app_guide_uppercase">GUIDE</string>
    <string name="app_guide_name">Prof. Shilpa Sonawani</string>
    <string name="app_group_members_branch_uppercase">SCHOOL OF COMPUTER ENGINEERING &amp; TECHNOLOGY</string>
    <string name="app_group_members_college_uppercase">MIT - WORLD PEACE UNIVERSITY</string>
    <string name="app_idf_instruction_uppercase">PLEASE FILL IN THE FOLLOWING INFORMATION.</string>
    <string name="app_idf_name">NAME :</string>
    <string name="app_idf_name_placeholder">John Doe</string>
    <string name="app_idf_dob">DATE OF BIRTH :</string>
    <string name="app_idf_dob_placeholder">21/06/2000</string>
    <string name="app_idf_gender">GENDER :</string>
    <string name="app_idf_gender_male">Male</string>
    <string name="app_idf_gender_female">Female</string>
    <string name="app_idf_mobile_no">MOBILE NO. :</string>
    <string name="app_idf_mobile_no_placeholder">9xxxxxxxxx0</string>
    <string name="app_idf_email_address">EMAIL ADDRESS :</string>
    <string name="app_idf_email_address_placeholder">username@example.com</string>
    <string name="app_symptoms_instruction_uppercase">PLEASE SELECT THE RELEVANT SYMPTOMS.</string>
    <string name="app_symptoms_whole_body">WHOLE BODY :</string>
    <string name="app_symptoms_fatigue">Fatigue</string>
    <string name="app_symptoms_light_headedness">Light-headedness</string>
    <string name="app_symptoms_dizziness">Dizziness</string>
    <string name="app_symptoms_malaise">Malaise</string>
    <string name="app_symptoms_heart">HEART :</string>
    <string name="app_symptoms_fast_heart_rate">Fast heart-rate</string>
    <string name="app_symptoms_palpitations">Palpitations</string>
    <string name="app_symptoms_common">COMMON :</string>
    <string name="app_symptoms_headache">Headache</string>
    <string name="app_symptoms_weakness">Weakness</string>
    <string name="app_symptoms_brittle_nails">Brittle nails</string>
    <string name="app_symptoms_pallor">Pallor</string>
    <string name="app_symptoms_shortness_of_breath">Shortness of breath</string>
    <string name="app_capture_images_instruction_uppercase">PLEASE CAPTURE IMAGES OF THE EYES.</string>
    <string name="app_capture_images_left_eye">LEFT EYE :</string>
    <string name="app_capture_images_left_eye_image">Left Eye Image</string>
    <string name="app_capture_images_right_eye">RIGHT EYE :</string>
    <string name="app_capture_images_right_eye_image">Right Eye Image</string>
    <string name="app_loading_results_loading_uppercase">LOADING</string>
    <string name="app_loading_results_results_uppercase">RESULTS...</string>
    <string name="app_results_instruction_uppercase">RESULTS</string>
    <string name="app_results_name">NAME :</string>
    <string name="app_results_age">AGE :</string>
    <string name="app_results_gender">GENDER :</string>
    <string name="app_results_symptoms">SYMPTOMS :</string>
    <string name="app_results_you_are">YOU ARE</string>
</resources>